--- a/noc_frame/.classpath
+++ b/noc_frame/.classpath
@@ -7,12 +7,12 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/noc_define"/>
-	<classpathentry kind="lib" path="lib/javassist.jar">
+	<classpathentry exported="true" kind="lib" path="lib/javassist.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/derby.jar">
+	<classpathentry exported="true" kind="lib" path="lib/derby.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
