修改了Type对象的结构,以便更合理的处理. 但对象是引用是还没有处理好
git-svn-id: svn://localhost/noc/trunk@74 626f0353-5094-f44b-bd95-4260a488012d

--- a/noc_frame/.classpath
+++ b/noc_frame/.classpath
@@ -8,7 +8,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/noc_define"/>
-	<classpathentry exported="true" kind="lib" path="lib/javassist.jar">
+	<classpathentry exported="true" kind="lib" path="lib/javassist.jar" sourcepath="E:/JavaDev/_InstallBinary/javassist-3.11.0/src/main">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
