修正部分Reference错误
git-svn-id: svn://localhost/noc/trunk@80 626f0353-5094-f44b-bd95-4260a488012d

--- a/noc_site/.project
+++ b/noc_site/.project
@@ -5,6 +5,7 @@
 	<projects>
 		<project>noc_frame</project>
 		<project>noc_define</project>
+		<project>noc_kao</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
