把isKey修改为Importance[PrimaryKey,Core,Important,Normal]
git-svn-id: svn://localhost/noc/trunk@84 626f0353-5094-f44b-bd95-4260a488012d

--- a/noc_site/WebContent/WEB-INF/web.xml
+++ b/noc_site/WebContent/WEB-INF/web.xml
@@ -68,7 +68,7 @@
 	
 	<servlet-mapping>
 		<servlet-name>NocDataServlet</servlet-name>
-		<url-pattern>/data/*</url-pattern>
+		<url-pattern>/basic/*</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>NocDebugServlet</servlet-name>
@@ -76,6 +76,6 @@
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>NocTypeServlet</servlet-name>
-		<url-pattern>/noc/lang/reflect/Type/*</url-pattern>
+		<url-pattern>/type/*</url-pattern>
 	</servlet-mapping>
 </web-app>
