--- a/noc_test/.classpath
+++ b/noc_test/.classpath
@@ -5,6 +5,10 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="lib" path="/noc_frame/lib/javassist.jar"/>
+	<classpathentry kind="lib" path="lib/commons-chain-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-chain-1.2-sources.jar"/>
+	<classpathentry kind="lib" path="lib/commons-pool-1.5.5.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/noc_define"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/noc_frame"/>
 	<classpathentry kind="output" path="bin"/>
