修正部分错误
git-svn-id: svn://localhost/noc/trunk@121 626f0353-5094-f44b-bd95-4260a488012d

--- a/noc_site/WebContent/WEB-INF/web.xml
+++ b/noc_site/WebContent/WEB-INF/web.xml
@@ -7,11 +7,11 @@
 
 	<context-param>
 		<param-name>define_path</param-name>
-		<param-value>D:\JavaDev\noc_define\bin</param-value>
+		<param-value>WEB-INF\lib\noc_define.jar</param-value>
 	</context-param>
 	<context-param>
 		<param-name>biz_path</param-name>
-		<param-value>D:\JavaDev\noc_kao\bin</param-value>
+		<param-value>WEB-INF\lib\noc_kao.jar</param-value>
 	</context-param>
 	<context-param>
 		<param-name>template_path</param-name>
