--- a/noc_site/WebContent/WEB-INF/web.xml
+++ b/noc_site/WebContent/WEB-INF/web.xml
@@ -27,7 +27,7 @@
 	</context-param>
 	<context-param>
 		<param-name>db_name</param-name>
-		<param-value>kao_0_0_1</param-value>
+		<param-value>kao_0_0_1_test_TIMESTAMP</param-value>
 	</context-param>
 	<context-param>
 		<param-name>db_username</param-name>
