调整DB Persister实现方式,优化结构
git-svn-id: svn://localhost/noc/trunk@149 626f0353-5094-f44b-bd95-4260a488012d

--- a/noc_site/WebContent/WEB-INF/web.xml
+++ b/noc_site/WebContent/WEB-INF/web.xml
@@ -26,8 +26,8 @@
 		<param-value>template_work_path</param-value>
 	</context-param>
 	<context-param>
-		<param-name>db_name</param-name>
-		<param-value>kao_0_0_1_test_TIMESTAMP</param-value>
+		<param-name>db_url</param-name>
+		<param-value>jdbc:derby:kao_0_0_1_test_TIMESTAMP;create=true</param-value>
 	</context-param>
 	<context-param>
 		<param-name>db_username</param-name>
