--- a/noc_frame/.classpath
+++ b/noc_frame/.classpath
@@ -20,6 +20,11 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar" sourcepath="E:/JavaDev/_InstallBinary/commons-logging-1.1.1/commons-logging-1.1.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="lib/ojdbc14.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
