--- a/noc_site/WebContent/WEB-INF/web.xml
+++ b/noc_site/WebContent/WEB-INF/web.xml
@@ -1,107 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	id="WebApp_ID" version="2.5">
-	<display-name>noc</display-name>
-
-	<context-param>
-		<param-name>debug</param-name>
-		<param-value>true</param-value>
-	</context-param>
-	<context-param>
-		<param-name>define_path</param-name>
-		<param-value>WEB-INF\lib\noc_define.jar</param-value>
-	</context-param>
-	<context-param>
-		<param-name>biz_path</param-name>
-		<param-value>WEB-INF\lib\noc_kao.jar</param-value>
-	</context-param>
-	<context-param>
-		<param-name>template_path</param-name>
-		<param-value>template</param-value>
-	</context-param>
-	<context-param>
-		<param-name>template_work_path</param-name>
-		<param-value>template_work_path</param-value>
-	</context-param>
-	
-	<context-param>
-		<param-name>db_driverclass</param-name>
-		<param-value>org.apache.derby.jdbc.EmbeddedDriver</param-value>
-	</context-param>
-	<context-param>
-		<param-name>db_url</param-name>
-		<param-value>jdbc:derby:kao_0_0_1_test_TIMESTAMP;create=true</param-value>
-	</context-param>
-	<context-param>
-		<param-name>db_username</param-name>
-		<param-value>user</param-value>
-	</context-param>
-	<context-param>
-		<param-name>db_password</param-name>
-		<param-value>password</param-value>
-	</context-param>
-<!-- 
-	<context-param>
-		<param-name>db_driverclass</param-name>
-		<param-value>oracle.jdbc.driver.OracleDriver</param-value>
-	</context-param>
-	<context-param>
-		<param-name>db_url</param-name>
-		<param-value>jdbc:oracle:thin:@192.168.239.231:1521:noc</param-value>
-	</context-param>
-	<context-param>
-		<param-name>db_username</param-name>
-		<param-value>noc</param-value>
-	</context-param>
-	<context-param>
-		<param-name>db_password</param-name>
-		<param-value>noc</param-value>
-	</context-param>
- -->
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-	</welcome-file-list>
-
-	<listener>
-		<listener-class>noc.http.InitListener</listener-class>
-	</listener>
-
-	<servlet>
-		<description></description>
-		<display-name>NocDataServlet</display-name>
-		<servlet-name>NocDataServlet</servlet-name>
-		<servlet-class>noc.http.NocDataServlet</servlet-class>
-	</servlet>
-	<servlet>
-		<description></description>
-		<display-name>NocDebugServlet</display-name>
-		<servlet-name>NocDebugServlet</servlet-name>
-		<servlet-class>noc.http.NocDebugServlet</servlet-class>
-	</servlet>
-	<servlet>
-		<description></description>
-		<display-name>NocTypeServlet</display-name>
-		<servlet-name>NocTypeServlet</servlet-name>
-		<servlet-class>noc.http.NocDataServlet</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-		<servlet-name>NocDataServlet</servlet-name>
-		<url-pattern>/basic/*</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>NocDebugServlet</servlet-name>
-		<url-pattern>/debug/*</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>NocTypeServlet</servlet-name>
-		<url-pattern>/type/*</url-pattern>
-	</servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
+  <display-name>noc</display-name>
+  <context-param>
+    <param-name>debug</param-name>
+    <param-value>true</param-value>
+  </context-param>
+  <context-param>
+    <param-name>define_path</param-name>
+    <param-value>WEB-INF\lib\noc_define.jar</param-value>
+  </context-param>
+  <context-param>
+    <param-name>biz_path</param-name>
+    <param-value>WEB-INF\lib\noc_kao.jar</param-value>
+  </context-param>
+  <context-param>
+    <param-name>template_path</param-name>
+    <param-value>template</param-value>
+  </context-param>
+  <context-param>
+    <param-name>template_work_path</param-name>
+    <param-value>template_work_path</param-value>
+  </context-param>
+  <context-param>
+    <param-name>db_driverclass</param-name>
+    <param-value>org.apache.derby.jdbc.EmbeddedDriver</param-value>
+  </context-param>
+  <context-param>
+    <param-name>db_url</param-name>
+    <param-value>jdbc:derby:kao_0_0_1_test_TIMESTAMP;create=true</param-value>
+  </context-param>
+  <context-param>
+    <param-name>db_username</param-name>
+    <param-value>user</param-value>
+  </context-param>
+  <context-param>
+    <param-name>db_password</param-name>
+    <param-value>password</param-value>
+  </context-param>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
+  </welcome-file-list>
+  <listener>
+    <listener-class>noc.http.InitListener</listener-class>
+  </listener>
+  <servlet>
+    <description></description>
+    <display-name>NocDataServlet</display-name>
+    <servlet-name>NocDataServlet</servlet-name>
+    <servlet-class>noc.http.NocDataServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <description></description>
+    <display-name>NocDebugServlet</display-name>
+    <servlet-name>NocDebugServlet</servlet-name>
+    <servlet-class>noc.http.NocDebugServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <description></description>
+    <display-name>NocTypeServlet</display-name>
+    <servlet-name>NocTypeServlet</servlet-name>
+    <servlet-class>noc.http.NocDataServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>NocDataServlet</servlet-name>
+    <url-pattern>/basic/*</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>NocDebugServlet</servlet-name>
+    <url-pattern>/debug/*</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>NocTypeServlet</servlet-name>
+    <url-pattern>/type/*</url-pattern>
+  </servlet-mapping>
+  <filter>
+    <display-name>HelpFilter</display-name>
+    <filter-name>HelpFilter</filter-name>
+    <filter-class>noc.http.HelpFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>HelpFilter</filter-name>
+    <url-pattern>/basic/*</url-pattern>
+    <dispatcher>REQUEST</dispatcher>
+  </filter-mapping>
 </web-app>
