--- a/SimpleSample/.classpath
+++ b/SimpleSample/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="htdocs"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/simple-4.1.21.jar" sourcepath="D:/linux/simple-4.1.21/src"/>
-	<classpathentry kind="lib" path="lib/freemarker.jar" sourcepath="E:/JavaDev/_InstallBinary/freemarker-2.3.15/src"/>
+	<classpathentry kind="lib" path="lib/freemarker.jar" sourcepath="E:/Resource/_InstallBinary/freemarker-2.3.15"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
