--- a/SimpleSample/.classpath
+++ b/SimpleSample/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="htdocs"/>
+	<classpathentry kind="src" path="testsrc"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/simple-4.1.21.jar" sourcepath="D:/linux/simple-4.1.21/src"/>
 	<classpathentry kind="lib" path="lib/freemarker.jar" sourcepath="E:/Resource/_InstallBinary/freemarker-2.3.15"/>
@@ -11,5 +12,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/noc_define"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/noc_frame"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/noc_kao"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
