--- a/noc-define/pom.xml
+++ b/noc-define/pom.xml
@@ -4,9 +4,21 @@
   <groupId>com.noc.app</groupId>
   <artifactId>noc-define</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.1.1</version>
   <name>noc-define</name>
   <url>http://maven.apache.org</url>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.0.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
