--- a/noc-engine/.classpath
+++ b/noc-engine/.classpath
@@ -1,17 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="htdocs"/>
-	<classpathentry kind="src" path="testsrc"/>
+	<classpathentry kind="src" output="target/classes" path="src/main/java"/>
+	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources"/>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="lib/simple-4.1.21.jar" sourcepath="D:/linux/simple-4.1.21/src"/>
-	<classpathentry kind="lib" path="lib/freemarker.jar" sourcepath="E:/Resource/_InstallBinary/freemarker-2.3.15"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.1.1-sources.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/noc_define"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/noc_frame"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/noc_kao"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
