--- a/test-kao/pom.xml
+++ b/test-kao/pom.xml
@@ -4,9 +4,21 @@
   <groupId>com.noc.app</groupId>
   <artifactId>test-kao</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
   <name>test-kao</name>
+  <version>0.1.1</version>
   <url>http://maven.apache.org</url>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.0.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -14,5 +26,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+		<dependency>
+			<groupId>com.noc.app</groupId>
+			<artifactId>noc-define</artifactId>
+			<version>0.1.1</version>
+		</dependency>
   </dependencies>
 </project>
