--- a/test-ooj/pom.xml
+++ b/test-ooj/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.noc.app</groupId>
-  <artifactId>test-biz</artifactId>
+  <artifactId>test-ooj</artifactId>
   <packaging>jar</packaging>
   <version>0.1.1</version>
-  <name>test-biz</name>
+  <name>test-ooj</name>
   <url>http://maven.apache.org</url>
 	<build>
 		<plugins>
