git-svn-id: svn://localhost/noc/trunk@256 626f0353-5094-f44b-bd95-4260a488012d

--- a/noc-frame/pom.xml
+++ b/noc-frame/pom.xml
@@ -15,6 +15,22 @@
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+						</manifest>
+						<manifestEntries>
+							<mode>development</mode>
+							<url>${pom.url}</url>
+						</manifestEntries>
+					</archive>
 				</configuration>
 			</plugin>
 		</plugins>
