--- a/test-kao/pom.xml
+++ b/test-kao/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.noc.app</groupId>
-  <artifactId>test-kao</artifactId>
-  <packaging>jar</packaging>
-  <name>test-kao</name>
-  <version>0.1.1</version>
-  <url>http://maven.apache.org</url>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.noc.app</groupId>
+	<artifactId>test-kao</artifactId>
+	<packaging>jar</packaging>
+	<name>test-kao</name>
+	<version>0.1.1</version>
+	<url>http://maven.apache.org</url>
 	<build>
 		<plugins>
 			<plugin>
@@ -15,21 +15,22 @@
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.noc.app</groupId>
 			<artifactId>noc-define</artifactId>
 			<version>0.1.1</version>
 		</dependency>
-  </dependencies>
+	</dependencies>
 </project>
