--- a/noc-engine/src/main/resources/log4j.properties
+++ b/noc-engine/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 #sample log4j.properties
 ##Sample log4j.properties content
-log4j.rootCategory=DEBUG,R,O
+log4j.rootCategory=INFO,R
 # Stdout
 log4j.appender.O=org.apache.log4j.ConsoleAppender
 # File
