测试时应使用Derby

--- a/noc-engine/src/test/resources/htdocs/WEB-INF/web.properties
+++ b/noc-engine/src/test/resources/htdocs/WEB-INF/web.properties
@@ -2,12 +2,12 @@ debug = true
 
 app_define_path = D:\\linux\\workspace\\test-kao\\target\\classes
 
-#db_driverclass = org.apache.derby.jdbc.EmbeddedDriver
-#db_url = jdbc:derby:db/kao_testrun;create = true
-#db_username = user
-#db_password = password
+db_driverclass = org.apache.derby.jdbc.EmbeddedDriver
+db_url = jdbc:derby:db/kao_testrun;create = true
+db_username = user
+db_password = password
 
-db_driverclass = oracle.jdbc.driver.OracleDriver
-db_url = jdbc:oracle:thin:@192.168.20.89:1521:NOC
-db_username = noc
-db_password = noc
+#db_driverclass = oracle.jdbc.driver.OracleDriver
+#db_url = jdbc:oracle:thin:@192.168.20.89:1521:NOC
+#db_username = noc
+#db_password = noc
