--- a/noc-frame/pom.xml
+++ b/noc-frame/pom.xml
@@ -56,6 +56,7 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.javassist</groupId>
@@ -66,11 +67,18 @@
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derby</artifactId>
 			<version>10.6.2.1</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.noc.app</groupId>
 			<artifactId>noc-define</artifactId>
 			<version>0.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.noc.app</groupId>
+			<artifactId>test-kao</artifactId>
+			<version>0.1.1</version>
+			<scope>test</scope>
 		</dependency>
 
 
