fix miss user with db connection

--- a/noc-frame/src/test/resources/app.properties
+++ b/noc-frame/src/test/resources/app.properties
@@ -1,4 +1,4 @@
-app_define_path = D:\\linux\\workspace\\test-kao\\target\\classes
+app_define_path = D:\\noc\\test-kao\\target\\classes
 
 default.driverclass = org.apache.derby.jdbc.EmbeddedDriver
 default.url = jdbc:derby:db/kao_testrun;create = true
