--- a/noc-define/pom.xml
+++ b/noc-define/pom.xml
@@ -1,6 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>noc</artifactId>
+    <groupId>com.noc.app</groupId>
+    <version>1-SNAPSHOT</version>
+  </parent>
   <groupId>com.noc.app</groupId>
   <artifactId>noc-define</artifactId>
   <packaging>jar</packaging>
