--- a/noc-engine/src/main/resources/htdocs/WEB-INF/web.properties
+++ b/noc-engine/src/main/resources/htdocs/WEB-INF/web.properties
@@ -1,6 +1,6 @@
 debug = true
 
-app_define_path = D:\\linux\\workspace\\test-kao\\target\\classes
+app_define_path = D:\\noc\\test-kao\\target\\classes
 
 db_driverclass = org.apache.derby.jdbc.EmbeddedDriver
 db_url = jdbc:derby:db/kao_0_0_1_test_TIMESTAMP;create = true
